--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,10 +59,11 @@ jobs:
       run: bash docs/ci/validate.sh
     - name: Check for broken links
       run: |
+        cd docs
         curl -sSLo linkcheck.sh \
           https://raw.githubusercontent.com/rust-lang/rust/master/src/tools/linkchecker/linkcheck.sh
         # Cannot use --all here because of the generated redirect pages aren't available.
-        sh linkcheck.sh docs/book
+        sh linkcheck.sh book
     - name: Deploy Book
       uses: peaceiris/actions-gh-pages@v3
       with:
